a) continued with notation; b) reordered chapters

--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -5,7 +5,7 @@
 % @license see 'LICENSE' file
 %
 
-\chapter{User Interfaces}
+\chapter{Graphical and Scripting User Interfaces}
 \label{ch:gui}
 
 The software of the present work has been realised in a modular fashion, it comprises a core
@@ -173,7 +173,7 @@ window (f) and can also be entered directly.
 The workspace is not restricted to a passive view of the instrument, but also functions as an editor.
 as it allows for an easy insertion, editing and removal of wall segments. The segments as well as the
 instrument axes themselves can be dynamically moved by dragging them using the mouse.
-More details on the various aspects of \textit{OpenGL} rendering are given in chapter \ref{ch:gl}.
+Internal details on the various aspects of \textit{OpenGL} rendering have already been given in chapter \ref{ch:gl}.
 
 
 
