--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -618,6 +618,17 @@
 
 @misc
 {
+	wiki_braket,
+	author = {{Wikipedia contributors}},
+	title = {{Bra–ket notation --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Bra%E2%80%93ket_notation&oldid=1036782686",
+	note = "[Online; accessed 24-April-2021]"
+}
+
+
+@misc
+{
 	wiki_line_line_intersection,
 	author = {{Wikipedia contributors}},
 	title = {{Line–line intersection --- {Wikipedia}{,} The Free Encyclopedia}},
