--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -70,7 +70,9 @@
 \input{tex/intro.tex}
 \input{tex/xtal.tex}
 \input{tex/paths.tex}
+\input{tex/algos.tex}
 \input{tex/implementation.tex}
+\input{tex/gl.tex}
 \input{tex/interfaces.tex}
 \input{tex/tests.tex}
 \input{tex/outlook.tex}
@@ -82,7 +84,6 @@
 \appendix
 %\part{Back matter}
 %\addcontentsline{toc}{part}{Back matter} 
-\input{tex/gl.tex}
 \input{tex/notation.tex}
 \input{tex/publications.tex}
 \input{tex/errata.tex}
