--- a/tex/gl.tex
+++ b/tex/gl.tex
@@ -5,11 +5,11 @@
 % @license see 'LICENSE' file
 %
 
-\chapter{Mathematics for 3-d Graphics}
+\chapter{Interlude II: Mathematics for 3-d Graphics}
 \label{ch:gl}
 
 The software of this work uses \textit{OpenGL} \cite{web_OpenGL} in its main graphical user interface (GUI).
-This appendix chapter adds technical details to the general descriptions in chapter \ref{sec:gui_gl}.
+Before discussing the main GUI proper, this chapter reviews concepts behind 3-d graphics in a general way.
 Here, we mainly describe the most important mathematical aspects of 3-d graphics, a comprehensive overview of 
 \textit{OpenGL} and the mathematics involved can be found in Ref. \cite{Sellers2002}.
 
