--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -6,6 +6,23 @@
 %
 
 \chapter{Notation}
+\label{ch:notation}
+
+\section{Mathematical symbols}
+Vectors in this work are written either as small letters with underscore, e.g. $\underline{v}$, 
+in component notation, e.g. $\left( v^i \right)$, or in Dirac notation \cite{wiki_braket}, which is 
+very popular in physics, e.g. $\left| v \right>$. 
+The first notation is chosen in cases when co- or contravariance does not play a role, 
+the latter two, when it does. 
+Contravariant vectors in component notation are written with a superscript (this is not a power!), 
+covariant vectors with a subscript.
+Also for the component notation, we furthermore use the Einstein summation convention \cite{wiki_summation},
+meaning that a sum is implied over indices which appear twice, one in a contravariant, and one
+in a covariant position, e.g.:
+\begin{equation}
+	\sum_{i=1}^{n} u_i v^i \ \equiv \ u_i v^i.
+\end{equation}
+Table \ref{tab:notation} gives details on this notation.
 
 \begin{table}[htb]
 	\centering
@@ -13,13 +30,13 @@
 		\hline
 		\bf{Notation} & \bf{Explanation} \tabularnewline
 		\hline
-		$ \underline{v} $ & A vector (contravariant or covariant). \tabularnewline
+		$ \underline{v} $ & A vector (either contravariant or covariant). \tabularnewline
 		\hline
 		$ M = \left( m_{ij} \right) $ & A matrix. \tabularnewline
 		\hline
-		$\left| x \right> \,=\, \left( x^i \right) $ & A contravariant vector. \tabularnewline
+		$\left| x \right> \,=\, \left( x^i \right) $ & A contravariant vector with superscript index. \tabularnewline
 		\hline
-		$\left< x \right| \,=\, \left( x_i \right) $ & A covariant vector. \tabularnewline
+		$\left< x \right| \,=\, \left( x_i \right) $ & A covariant vector with subscript index. \tabularnewline
 		\hline
 		$s \,=\, \left< x | y \right> \,=\, x_i y^i \,=\, g_{ij} x^i y^j $ & A scalar/inner product, the sums over $i$ and $j$ are implied \cite{wiki_summation}. \tabularnewline
 		\hline
@@ -28,4 +45,33 @@
 	\end{tabular}
 	\caption[Symbol notation]{Notation of used symbols.}
 	\label{tab:notation}
+\end{table}
+
+
+\section{Abbreviations}
+Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
+
+\begin{table}[htb]
+	\centering
+	\begin{tabular}{|c|c|}
+		\hline
+		\bf{Abbreviation} & \bf{Explanation} \tabularnewline
+		\hline
+		CLI                     & \underline{C}ommand \underline{L}ine \underline{I}nterface. \tabularnewline
+		\hline
+		GUI                     & \underline{G}raphical \underline{U}ser \underline{I}nterface. \tabularnewline
+		\hline
+		ILL                      & \underline{I}nstitut \underline{L}aue-\underline{L}angevin, Grenoble, France. \tabularnewline
+		\hline
+		SO(n)                 & \underline{S}pecial \underline{O}rthogonal Group in \underline{n} dimensions. \tabularnewline
+		\hline
+		TAS                    & \underline{T}riple \underline{A}xis \underline{S}pectrometer. \tabularnewline
+		\hline
+		UB method        & Not technically an abbreviation, but the product of two matrices \tabularnewline
+		                          & which also give the name to the standard method for crystalographic \tabularnewline
+		                          & coordinate calculation in spectrometers \cite{Lumsden2005}. \tabularnewline
+		\hline
+	\end{tabular}
+	\caption[Abbreviations]{Abbreviations used in this work.}
+	\label{tab:abbreviations}
 \end{table}
