a) figures; b) continued with ui chapter

--- a/tex/gl.tex
+++ b/tex/gl.tex
@@ -408,7 +408,7 @@ see Ref. \cite[pp. 103-126]{Sellers2002}.
 
 The actual geometric information such as vertex positions, vertex normals, but also colours, are declared as
 input attributes to the vertex shader using the keyword \lstinline[language=C]|in|.
-Attributes can be set from the user program by binding a vertex array object to them,
+Attributes can be set from the user program by binding a vertex array object \cite{wiki_vao} to them,
 where the array has the exact configuration that is given by the vertex shader's order of \lstinline[language=C]|in|
 variables \cite[pp. 97-102]{Sellers2002}.
 The elements of the vertex array are each transformed by the vertex shader program, which stores the resulting 
