--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -512,6 +512,17 @@
 
 @misc
 {
+	wiki_vao,
+	author = {{OpenGL Wiki contributors}},
+	title = {{Vertex Specification -- Vertex Array Object --- OpenGL Wiki}},
+	year = "2021",
+	url = "https://www.khronos.org/opengl/wiki_opengl/index.php?title=Vertex_Specification&oldid=14620#Vertex_Array_Object",
+	note = "[Online; accessed 24-August-2021]"
+}
+
+
+@misc
+{
 	wiki_fractional,
 	author = {{Wikipedia contributors}},
 	title = {{Fractional coordinates --- {Wikipedia}{,} The Free Encyclopedia}},
