--- a/tex/tests.tex
+++ b/tex/tests.tex
@@ -36,6 +36,11 @@ These are described in section \ref{sec:tests_tools}.
 	\vspace{0.25cm}
 	\includegraphics[width = 0.49 \textwidth]{figures/linesgui_inters}
 	\caption[Line segments tool.]{Line segments tool.
+		This program allows the dynamic calculation of
+		(a) line segment Voronoi regions (coloured) and bisectors (black lines),
+		(b) trapezoid maps, and
+		(c) sweep-based points of intersection (green points).
+		Line segment vertices can be inserted, deleted and moved using the mouse.
 		\label{fig:linesgui}}
 \end{figure}
 
@@ -48,6 +53,11 @@ These are described in section \ref{sec:tests_tools}.
 	\hspace{0.05cm}
 	\includegraphics[width = 0.49 \textwidth]{figures/polygui_kernel}
 	\caption[Polygon tool.]{Polygon tool.
+		This program calculates the
+		(a) convex sub-regions of a concave polygon, and
+		(b) the visibility kernel (red) of a polygonal region.
+		Polygon vertices can be inserted, deleted and moved using the mouse, updates
+		are performed dynamically.
 		\label{fig:linesgui}}
 \end{figure}
 
@@ -60,6 +70,13 @@ These are described in section \ref{sec:tests_tools}.
 	\hspace{0.05cm}
 	\includegraphics[width = 0.49 \textwidth]{figures/hullgui_kruskal}
 	\caption[Convex hull tool.]{Convex hull tool.
+		This program calculates 
+		(a) the convex hull (thick black lines), the Voronoi diagram (red lines), 
+			the Delaunay triangulation (thin black lines), as well as
+		(b) Kruskal's minimum spanning tree (green lines)
+		of a collection of vertices.
+		As with the other test tools, the vertices can be inserted, deleted and moved 
+		using the mouse, updates are performed dynamically.
 		\label{fig:linesgui}}
 \end{figure}
 
